--- a/static/index.html
+++ b/static/index.html
@@ -3,107 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://unpkg.com/codemirror@5.63.1/lib/codemirror.css">
-    <style>
-        body,
-        html {
-            height: 100%;
-            width: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        
-        * {
-            font-family: monospace;
-        }
-
-        body {
-            display: flex;
-            align-items: center;
-            background-color: #202020;
-        }
-
-        #editor {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #editor>.CodeMirror {
-            width: 100%;
-            height: 100%;
-            max-width: 80ch;
-            resize: none;
-            box-sizing: border-box;
-            font-size: 1rem;
-        }
-
-        .CodeMirror-gutters {
-            border-right-color: #555555;
-        }
-
-        .CodeMirror-gutters, #editor>.CodeMirror {
-            background-color: #303030;
-            color: #f5f4f0;
-        }
-
-        .CodeMirror-cursors .CodeMirror-cursor {
-            background-color: transparent;
-            border-left: 2px solid #f5f4f0;
-        }
-
-        .CodeMirror-linenumbers .CodeMirror-linenumber {
-            font-size: 1rem;
-        }
-
-        #editor > .cm-s-default .cm-header {
-            color: white;
-        }
-
-        .cm-header-1 {
-            font-size: 150%;
-        }
-
-        .cm-header-2 {
-            font-size: 130%;
-        }
-
-        .cm-header-3 {
-            font-size: 120%;
-        }
-
-        .cm-header-4 {
-            font-size: 110%;
-        }
-
-        .cm-header-5 {
-            font-size: 100%;
-        }
-
-        .cm-header-6 {
-            font-size: 90%;
-        }
-
-        .cm-s-default .cm-variable-2 {
-            color: #eeeeee;
-        }
-
-        .cm-s-default .CodeMirror-selected {
-            background: rgba(255,255,255, 0.4);
-        }
-
-        #statusline {
-            height: 1.2rem;
-            max-width: 80ch;
-            color: #777777;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
