--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="https://unpkg.com/codemirror@5.63.1/lib/codemirror.css">
+    <link rel="stylesheet" href="prompt.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <script src='js/main.js'></script>
+    <div id='app'></div>
 </body>
 
 </html>
