vendor codemirror css instead of using unpkg

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.63.1/lib/codemirror.css">
+    <link rel="stylesheet" href="vendor/codemirror-5.63.1/lib/codemirror.css">
     <link rel="stylesheet" href="prompt.css">
     <link rel="stylesheet" href="style.css">
 </head>
