--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="vendor/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="vendor/codemirror/addon/dialog/dialog.css">
     <link rel="stylesheet" href="prompt.css">
     <link rel="stylesheet" href="style.css">
 </head>
