add syntax highlighting for code blocks

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="vendor/codemirror/addon/dialog/dialog.css">
     <link rel="stylesheet" href="prompt.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="upload.css">
 </head>
 
